added elastich search and done logic
